
 - SI:TRAP-FPE always returns an integer denoting the new active / inactive
   floating point traps. In particular, (SI:TRAP-FPE 'LAST T) returns the
   currently active traps. This value can be passed to SI:TRAP-FPE as first
   argument again. This is useful for performing a computation without traps
	(let* (( (si::trap-fpe 'last nil)))
	  (prog1 (/ 0.0 0.0) (si::trap-fpe bits t)))

 - A new configurable option ECL_OPT_THREAD_INTERRUPT_SIGNAL determines
   which Unix interrupt type is used to communicate between threads.

 - Some functions got new names: ecl_make_cfun, ecl_make_cfun_va,
   ecl_make_cclosure_va, ecl_def_c_function, ecl_def_c_function_va.

 - Compiled functions now carry information about their source file
   (based on patches by JC Beaudoin)

* Bugs fixed:

 - Remove an obsolete #if statement for Solaris that broke current builds
   with Solaris 10.

 - The mechanism for checking the existence of [u]int{16,32,64}_t or other
   replacement types was not used for [u]int8_t.

 - When COMPILE-FILE is invoked with a non-nil value of :OUTPUT-FILE, ECL
   now honors the file type supplied by the user, instead of overriding it
   with "fas" or "fasl". The same applies to COMPILE-FILE-PATHNAME.

 - When building ECL's C preprocessor (dpp), the value of CPPFLAGS was
   not used.

 - A wrong order in the list of libraries (-lpthread -lgc) prevented ECL
   from having multithread support in FreeBSD, OpenBSD and NetBSD.

 - Removed a shell command from src/Makefile.in The command used braces {}
   which FreeBSD does not understand.

 - Changed the way in which threads are created and registered with ECL to
   avoid certain race conditions and data loss when it takes a long time
   betwee calls to mp:make-proceess and mp:process-enable

 - ecl_import_current_thread() now properly stores the thread handle in
   the process object and can be called multiple times for the same thread.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***