@@ -25,3 +25,22 @@
 #define TRAMPOLINK(narg, vv, lk, cblock) \
 	cl_va_list args; cl_va_start(args, narg, narg, 0); \
 	return(_ecl_link_call(vv, (cl_objectfn *)lk, cblock, narg, args))
+
+#define ecl_def_ct_base_string(name,chars,len,static,const)     \
+        static const struct ecl_base_string name ## data = {    \
+                (int8_t)t_base_string, 0, FALSE, FALSE,         \
+                Cnil, (cl_index)(len), (cl_index)(len),         \
+                (ecl_base_char*)(chars) };                      \
+        static const cl_object name = (cl_object)(& name ## data)
+
+#define ecl_def_ct_single_float(name,f,static,const)            \
+        static const struct ecl_doublefloat name ## data = {    \
+                (int8_t)t_singlefloat, 0, 0, 0,                 \
+                (float)(f) };                                   \
+        static const cl_object name = (cl_object)(& name ## data)
+
+#define ecl_def_ct_double_float(name,f,static,const)            \
+        static const struct ecl_singlefloat name ## data = {    \
+                (int8_t)t_doublefloat, 0, 0, 0,                 \
+                (double)(f) };                                  \
+        static const cl_object name = (cl_object)(& name ## data)
